# LearningSocketProgramming

./: CMakeLists.txt  client.c  server.c
src/: client.c  packet.h  server.c
src/http/: httpServer.c  main.c
src/http/config/: conf.txt
src/http/logs/: logs.txt
src/http/pages/: index.html
src/http/server/: httpserver.c  httpserver.h
